Hardcoded Strings Fix
A quick fix for any "Hardcoded string..." errors. New variables have been added and linked to the buttons causing the errors.

Note: Some layout contraints have been changed as a performance and design test. This may be reverted as soon as it causes errors.
Co-Authored-By: lareign <lareign@users.noreply.github.com>

--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Main Menu</string>
+    <string name="Logo_Desc">The Hogeschool Rotterdam Logo</string>
+    <string name="Inventory_Button">View Inventory</string>
+    <string name="Reserve_Button">Reserve Item</string>
+    <string name="My_Items_Button">My Items</string>
+    <string name="ToS_Button">Terms of Service</string>
+    <string name="Log_Out_Button">Log Out</string>
+    <string name="Profile_Button">Account Settings</string>
 </resources>
