--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="ToS_Button">Terms of Service</string>
     <string name="Log_Out_Button">Log Out</string>
     <string name="Profile_Button">Account Settings</string>
+    <string name="BackToMenu_Button">Back to Menu</string>
+
+    <string name="FILLER_TEXT">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
+    <string name="Inventory_filler">Inventory screen</string>
+    <string name="Reservation_filler">Reserve Item screen</string>
+    <string name="MyItems_filler">My Items screen</string>
+    <string name="AccountSettings_filler">Account Settings screen</string>
+    <string name="ComingSoon">Coming Soon</string>
+
 </resources>
