--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="Email_Title">Email:</string>
     <string name="Student_Number_Title">Student Number:</string>
 
+    <!-- Inventory Screen -->
+    <string name="Inventory_Header">Inventory</string>
+
     <!--Testing & Development -->
     <string name="Inventory_filler">Inventory screen</string>
     <string name="Reservation_filler">Reserve Item screen</string>
