--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -18,6 +18,12 @@
     <string name="Email_Title">Email:</string>
     <string name="Student_Number_Title">Student Number:</string>
 
+    <!--Login Screen -->
+    <string name="Email_Title2">Email</string>
+    <string name="Password_Title">Password</string>
+    <string name="New_User">New user? Click here!</string>
+    <string name="Login">Login</string>
+
     <!--Testing & Development -->
     <string name="Inventory_filler">Inventory screen</string>
     <string name="Reservation_filler">Reserve Item screen</string>
