Quick design changes, mostly to the Product Info screen and the User Info screen. Also added a product description to the JSON file to make further updates easier

--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="Email_Title">Email:</string>
     <string name="Student_Number_Title">Student Number:</string>
 
+    <!-- Account Info -->
+    <string name="AccountInfo_Title">Account Information</string>
+
     <!-- Inventory Screen -->
     <string name="Inventory_Header">Inventory</string>
 
@@ -38,4 +41,6 @@
     <string name="Email_Filler">ExampleUser1502@email.com</string>
     <string name="StudentNum_Filler">0123456</string>
     <string name="nickname">NickName</string>
+
+
 </resources>
