WIP, added a screen that allows admins to see all users, and authorize reservations/returns
to access, go to the TOS from the user screen
Bugs:
adding one reserve item to borrow list removes everything from the reserves. Same with the returning borrowed things
No stock changing when returning.

--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -24,8 +24,12 @@
     <!-- Inventory Screen -->
     <string name="Inventory_Header">Inventory</string>
 
+    <!-- User List Screen -->
+    <string name="RUL_Header">Current Users:</string>
+
     <!-- My Items Screen -->
-    <string name="MyItems_Header">My Items</string>
+    <string name="Res_Header">Reserved items:</string>
+    <string name="Borrow_Header">Borrowed items:</string>
 
     <!-- Reserve Items Screen -->
     <string name="Reserve_Header">Reserve Items</string>
