--- a/MainMenu/app/src/main/res/values/strings.xml
+++ b/MainMenu/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <!-- User List Screen -->
     <string name="RUL_Header">Current Users:</string>
     <string-array name="RoleList">
+        <item>Select Role</item>
         <item>Admin</item>
         <item>User</item>
     </string-array>
